# master-thesis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  file_utils.py  losses.py  main.py  pyproject.toml  train.py  utils.py
configs/: config.yaml
configs/data/: cifar10.yaml  emnist.yaml  fashionmnist.yaml  mnist.yaml  tinyimagenet.yaml
configs/model/: autoencoder.yaml  cspn.yaml
configs/optimization/: default.yaml
configs/runtime/: default.yaml
configs/train/: default.yaml
dataset_loaders/: __init__.py  helpers.py  tinyimagenet.py
models/: __init__.py  autoencoder.py  combined_model.py
models/autoencoder/: __init__.py  abstract_autoencoder.py  simple_autoencoder.py  variational_autoencoder.py
models/cspn/: __init__.py  abstract_cspn.py  spflow_cspn.py
models/decoder/: __init__.py  abstract_decoder.py  simple_decoder.py
models/encoder/: __init__.py  abstract_encoder.py  simple_encoder.py
utils/: __init__.py  data.py  time_utils.py  visualization.py
